# pathwise

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-23-v0.1.0.md  2026-03-25-pathwise-batch-update.md
docs/superpowers/specs/: 2026-03-23-pathwise-design.md  2026-03-25-pathwise-batch-update-design.md
pathwise-core/: Cargo.toml
pathwise-core/benches/: simulate.rs
pathwise-core/src/: error.rs  lib.rs  rng.rs  simulate.rs  state.rs
pathwise-core/src/process/: markov.rs  mod.rs
pathwise-core/src/scheme/: euler.rs  milstein.rs  milstein_nd.rs  mod.rs  sri.rs
pathwise-core/tests/: convergence.rs  nd.rs
pathwise-geo/: Cargo.toml
pathwise-geo/src/: lib.rs  process.rs  sde.rs  simulate.rs
pathwise-geo/src/scheme/: euler.rs  milstein.rs  mod.rs  sri.rs
pathwise-geo/tests/: manifold_sde.rs
pathwise-py/: Cargo.toml
pathwise-py/src/: lib.rs  py_error.rs  py_process.rs  py_scheme.rs  py_simulate.rs
pathwise-py/tests/: test_schemes.py
python/pathwise/: __init__.py  _pathwise.pyi
tests/: test_api.py  test_numerical.py
