[package]
name = "pathwise-core"
version = "0.2.0"
edition = "2021"

[dependencies]
ndarray = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simulate"
harness = false
