[package]
name = "pathwise-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance SDE simulation engine: Euler, Milstein, SRI (strong-order 1.5), CIR, Heston, correlated OU"
documentation = "https://docs.rs/pathwise-core"
readme = "../README.md"

[dependencies]
ndarray = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simulate"
harness = false
