[package]
name = "pathwise-geo"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/alejandro-soto-franco/pathwise"
keywords = ["sde", "simulation", "stochastic", "finance", "riemannian"]
categories = ["mathematics", "science", "simulation"]
description = "Riemannian manifold SDE simulation (geodesic Euler/Milstein/SRI) on S^n, SO(n), SPD(n) via the cartan geometry library"
documentation = "https://docs.rs/pathwise-geo"
readme = "../README.md"

[dependencies]
pathwise-core = { path = "../pathwise-core", version = "0.2" }
cartan-core = { path = "../../cartan/cartan-core", version = "0.1" }
cartan-manifolds = { path = "../../cartan/cartan-manifolds", version = "0.1", default-features = false, features = ["std"] }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
rayon = "1"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
rand_distr = { version = "0.5" }
ndarray = "0.15"

[dev-dependencies]
rand = { version = "0.9", features = ["std_rng"] }

# Declare pathwise-geo as a standalone workspace so that Cargo does not try to
# pull it into the parent pathwise workspace (which lacks the cartan siblings).
[workspace]
