[package]
name = "pathwise-py"
version.workspace = true
edition.workspace = true
publish = false  # cdylib Python extension; distributed via PyPI as pathwise-sde, not crates.io

[lib]
name = "pathwise"
crate-type = ["cdylib"]

[dependencies]
pathwise-core = { path = "../pathwise-core" }
pyo3 = { workspace = true }
numpy = { workspace = true }
ndarray = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
